--- a/Flask/playground/templates/home.html
+++ b/Flask/playground/templates/home.html
@@ -4,15 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='/css/style.css') }}">
     <title>Playground</title>
 </head>
 <body>
     <h3>Playground</h3>
-    
-    {% for x in range(0, x): %}
-    <div class="box"></div>
-    {% endfor %}
-
+    <h1>{{phrase}}</h1>
 </body>
 </html>
