Dojo Survey Update

--- a/Flask/Dojo_Survey/templates/results.html
+++ b/Flask/Dojo_Survey/templates/results.html
@@ -39,6 +39,18 @@
             </label>
             <p> {{ comment }} </p>
         </div>
+        <div class="form-group">
+            <label for="comment_area">
+                <h3>Remote</h3>
+            </label>
+            <p> {{ remote }} </p>
+        </div>
+        <div class="form-group">
+            <label for="comment_area">
+                <h3>College Student</h3>
+            </label>
+            <p> {{ collegeStudent }} </p>
+        </div>
         <button type="submit" action="/" class="btn btn-outline-dark">Go Back</button>
     </div>
 </body>
