--- a/Flask/Dojo_Survey/templates/index.html
+++ b/Flask/Dojo_Survey/templates/index.html
@@ -37,16 +37,18 @@
                     <option>Java</option>
                 </select>
             </div>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
-                <label class="form-check-label" for="flexRadioDefault2">
-                  Default checked radio
-                </label>
-              </div>
             <div class="form-group">
                 <label for="comment_area">Comment (optional):</label>
                 <textarea type="text" class="form-control" name="comment"></textarea>
             </div>
+            <div class="form-check">
+                <label class="form-check-label" for="remote">Remote: </label>
+                <input class="form-check-input" type="radio" name="remote" id="flexRadioDefault2">
+              </div>
+            <div class="form-check">
+                <label class="form-check-label" for="collegeStudent">College Student</label>
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" name="collegeStudent">
+              </div>
             <button type="submit" class="btn btn-outline-dark">Button</button>
         </form>
     </div>
