--- a/Flask/playground/static/css/style.css
+++ b/Flask/playground/static/css/style.css
@@ -3,5 +3,5 @@
     width: 200px;
     height: 200px;
     margin: 10px;
-    background-color: {{ background }};
+    background-color: peachpuff;
 }
